--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 
-  <%= favicon_link_tag %>
+    <%= favicon_link_tag %>
 
-  <title><%= full_title yield(:title) %></title>
-</head>
-<body>
+    <title><%= full_title yield(:title) %></title>
+  </head>
 
-<%= render partial: 'nav' %>
-<%= render partial: 'notices' %>
+  <body>
+    <div class="container">
+      <%= render partial: 'nav' %>
+      <%= render partial: 'notices' %>
 
+      <%= yield %>
 
-  <div class="container">
-   <%= yield %>
-  </div>
-
+      <%= render partial: 'footer' %>
+    </div> <!-- /container -->
   </body>
-</html
+</html>
